# ScholarAgents

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: demo.py  quickstart.py
outputs/: README.md  artifact_index.json
outputs/json/: 20260328_141409_case_1_literature_review_workflow.json  20260328_141409_case_6_paper_writing_workflow.json  20260328_141409_case_7_experiment_design_workflow.json
outputs/markdown/: 20260328_141409_case_5_literature_review_workflow.md  20260328_141409_case_6_paper_writing_workflow.md  20260328_141409_case_7_experiment_design_workflow.md
scholaragents/: __init__.py  config.py
scholaragents/agents/: __init__.py  experiment_agent.py  general_agent.py  literature_agent.py  writing_agent.py
scholaragents/artifacts/: __init__.py  artifact_store.py  exporters.py
scholaragents/core/: __init__.py  artifact.py  base_agent.py  context.py  orchestrator.py  planner.py  registry.py  router.py
scholaragents/mcp/: __init__.py  arxiv_mcp.py  base_client.py  filesystem_mcp.py  github_mcp.py  zotero_mcp.py
scholaragents/memory/: __init__.py  shared_memory.py  short_term_memory.py  user_profile.py
scholaragents/models/: __init__.py  base_model_client.py  exceptions.py  generation_config.py  mock_client.py  model_factory.py  openai_client.py  response_parser.py  retry_policy.py  usage_tracker.py
scholaragents/skills/: __init__.py  base_skill.py  citation_extract.py  experiment_design.py  experiment_planning.py  outline_generation.py  paper_search.py  paper_summary.py  pdf_summary.py  plotting.py  (+1 more)
(+19 files in other folders)
